--- a/HiChongSwift/Info.plist
+++ b/HiChongSwift/Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>请您允许程序进行定位。</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
