现在hichong://可以打开应用了哦

--- a/HiChongSwift/Info.plist
+++ b/HiChongSwift/Info.plist
@@ -20,6 +20,19 @@
 	<string>2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.SAE.hichong</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>hichong</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>12</string>
 	<key>LSRequiresIPhoneOS</key>
