现在可以删除宠物圈了

--- a/HiChongSwift/Info.plist
+++ b/HiChongSwift/Info.plist
@@ -42,6 +42,16 @@
 				<string>wxf66f281df0560ff2</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.weibo</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wb3704764004</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>13</string>
